--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ vignettes/*.pdf
 # Shiny token, see https://shiny.rstudio.com/articles/shinyapps.html
 rsconnect/
 © 2018 GitHub, Inc.
+.Rproj.user
